{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 295,
  "lineage": "39818e23-27e9-1ea0-97b6-04448b6f6dfd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:815544789754:instance/i-037d84b557b911132",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-037d84b557b911132",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-087c07c8ee8487a57",
            "private_dns": "ip-10-0-0-32.eu-west-2.compute.internal",
            "private_ip": "10.0.0.32",
            "public_ip": "35.177.253.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-08fae3026f9839c81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ecebcf16fa743ad",
            "tags": {
              "Name": "api"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012161a43e7182a31"
            ]
          },
          "depends_on": [
            "aws_instance.mongo_instance",
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:815544789754:instance/i-0e80b38d9505c0276",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e80b38d9505c0276",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-09f9d342828d7541f",
            "private_dns": "ip-10-0-0-147.eu-west-2.compute.internal",
            "private_ip": "10.0.0.147",
            "public_ip": "35.178.177.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0c1b53bd7a5f379c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ecebcf16fa743ad",
            "tags": {
              "Name": "mongo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012161a43e7182a31"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ui_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c30afcb7ab02233d",
            "arn": "arn:aws:ec2:eu-west-2:815544789754:instance/i-0a770c6c76f402446",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a770c6c76f402446",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-key-pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-083247bfe75b3992b",
            "private_dns": "ip-10-0-0-149.eu-west-2.compute.internal",
            "private_ip": "10.0.0.149",
            "public_ip": "52.56.208.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0e281f463c9ddd00f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ecebcf16fa743ad",
            "tags": {
              "Name": "ui"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012161a43e7182a31"
            ]
          },
          "depends_on": [
            "aws_security_group.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c92cd5926dc08deb",
            "owner_id": "815544789754",
            "vpc_id": "vpc-096fb0941e2bf277d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013177ec961fd5453",
            "original_route_table_id": "rtb-0461b2ba48328480c",
            "route_table_id": "rtb-0b750526ec67db67d",
            "vpc_id": "vpc-096fb0941e2bf277d"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b750526ec67db67d",
            "owner_id": "815544789754",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c92cd5926dc08deb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-096fb0941e2bf277d"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815544789754:security-group/sg-012161a43e7182a31",
            "description": "Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012161a43e7182a31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-security-group",
            "name_prefix": null,
            "owner_id": "815544789754",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-096fb0941e2bf277d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815544789754:subnet/subnet-01ecebcf16fa743ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01ecebcf16fa743ad",
            "map_public_ip_on_launch": false,
            "owner_id": "815544789754",
            "vpc_id": "vpc-096fb0941e2bf277d"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:815544789754:vpc/vpc-096fb0941e2bf277d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03529cb72f8725e06",
            "default_route_table_id": "rtb-0461b2ba48328480c",
            "default_security_group_id": "sg-0b4d939a9fedbcabe",
            "dhcp_options_id": "dopt-a57433cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-096fb0941e2bf277d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0461b2ba48328480c",
            "owner_id": "815544789754"
          }
        }
      ]
    }
  ]
}